# MultiInkMapping

./: .gitignore  CMakeLists.txt  MiniICC.cpp  MiniICC.hpp  MiniTIFF.cpp  MiniTIFF.hpp  MultiInkMapping.cpp  MultiInkMapping.hpp  Options.cpp  Options.hpp  README.md  bluecard_markers.json  errors.json  experimental.json  greencard_markers.json  inks15.json  inks15.json_verify.json  markers1.json  markers2.json  markers3.json  markers4.json  overprint_test.json  pinkcard_markers.json  test.json  violetcard_markers.json  whitecard_markers.json
.github/workflows/: cmake-multi-platform.yml
MultiInkMapping.xcodeproj/: project.pbxproj
MultiInkMapping.xcodeproj/project.xcworkspace/xcuserdata/ccox.xcuserdatad/: UserInterfaceState.xcuserstate
MultiInkMapping.xcodeproj/xcshareddata/xcschemes/: MultiInkMapping.xcscheme
MultiInkMapping.xcodeproj/xcuserdata/ccox.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MultiInkMapping.xcodeproj/xcuserdata/ccox.xcuserdatad/xcschemes/: MultiInkMapping Release.xcscheme  xcschememanagement.plist
